--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
-title: John Doe # your name (or website title) here
+title: John Mahoney | The Tech and I
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  Websites
+  <br>Blockchain</br> 
   <br><br>
   Second description 
   <br><br>
