--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   Websites
   <br>Blockchain</br> 
   <br><br>
-  Second description 
+  Office 365 
   <br><br>
   <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
   
